# livereduce

./: .gitignore  .pre-commit-config.yaml  50-snsdata-livereduce.rules  CONTRIBUTING.md  Dockerfile  Dockerfile.rpmlint  LICENSE  MANIFEST.in  README.md  buildrpm  environment.yml  livereduce.service  livereduce.spec  livereduce_watchdog.service  pyproject.toml  pypyroject.toml  reduce_PG3_live.py  reduce_PG3_live_post_proc.py  reduce_PG3_live_proc.py  reduce_live.py  rpmbuild  rpmbuild.sh  ruff.toml  setup.py
.github/workflows/: actions.yml  update-lockfiles.yml
docs/: README.md  architecture.md  configuration.md  developer-guide.md  examples.md  processing-scripts.md  troubleshooting.md  user-guide.md
scripts/: livereduce.py  livereduce.sh  livereduce_watchdog.sh  reduce_live.py  which_python.py
test/: README.md  fake.conf  fake_event.conf  fake_event_server.py  fake_server.py  reduce_ISIS_Event_live_proc.py  reduce_ISIS_Histogram_live_proc.py  test_livereduce.bats
test/postprocessing/: fake.conf  reduce_ISIS_Histogram_live_post_proc.py
test/rpm/: README.md  build_and_test.sh  quick_check.sh  setup_test_environment.sh  test_docker_rpm.sh  test_manual_rpm.sh
