[project]
name = "livereduce"
description = "Daemon for running live data reduction with systemd"
version="1.14"
#dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{name="Pete Peterson",email="petersonpf@ornl.gov"}]

[project.urls]
Homepage = "https://github.com/mantidproject/livereduce"

[build-system]
requires = [
  "setuptools",
   "wheel",
   "toml"
   ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data=true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test"]

[tool.setuptools.package-data]
"*" = ["*.sh", "*.service"]

#TODO define entrypoints
