[project]
name = "livereduce"
description = "Daemon for running live data reduction with systemd"
version="1.16"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{name="Pete Peterson",email="petersonpf@ornl.gov"}]

[project.urls]
Homepage = "https://github.com/mantidproject/livereduce"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.workspace]
name = "livereduce"
channels = ["conda-forge", "mantid", "https://prefix.dev/pixi-build-backends"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.dependencies]
mantid = "*"
pyinotify = "*"
psutil = "*"
hatchling = "*"
pre-commit = ">=4.2.0"
argcomplete = ">=3.6.3,<4"

[tool.pixi.pypi-dependencies]
livereduce = { path = ".", editable = true }

[tool.pixi.tasks]
build = "hatchling build -t sdist"
